code25_all/scala/17463429.txt
def getOrElse[B >: A](default: => B): B

def getOrElse[B >: A](default: B): B

scala> def f1(x: => Int) = x
f1: (x: => Int)Int

scala> f1(1)
res6: Int = 1

scala> def f1(x: Int) = x
f1: (x: Int)Int

scala> f1(1)
res8: Int = 1

scala> def f1(x: Unit => Int) = x
f1: (x: Unit => Int)Unit => Int

scala> f1(1)
<console>:10: error: type mismatch;
 found   : Int(1)
 required: Unit => Int
              f1(1)
                 ^

